<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context=".activity.DetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:navigationIcon="@drawable/ic_back_black">

        <RelativeLayout
            android:id="@+id/title_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/name_title"
                style="@style/NameTitleStyle"
                android:text="@string/item_name_demo" />

            <TextView
                android:id="@+id/price_title"
                style="@style/PriceTitleStyle"
                android:layout_below="@+id/name_title"
                android:layout_marginTop="@dimen/item_horizontal_margin_s_small"
                android:text="@string/price_demo" />
        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/horizontal_small"
        style="@style/horizontal_small"
        android:layout_below="@+id/toolbar_detail" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/horizontal_small"
        android:fillViewport="true">

        <RelativeLayout
            android:id="@+id/content_product_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/image_pager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/viewpager"
                    android:layout_width="match_parent"
                    android:layout_height="300dp" />

                <com.tbuonomo.viewpagerdotsindicator.SpringDotsIndicator
                    android:id="@+id/spring_dots_indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/viewpager"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/item_horizontal_margin_medium"
                    app:dampingRatio="0.5"
                    app:dotsColor="@color/colorPrimary"
                    app:dotsCornerRadius="10dp"
                    app:dotsSize="16dp"
                    app:dotsSpacing="6dp"
                    app:dotsStrokeColor="@color/paleGrey"
                    app:dotsStrokeWidth="2dp"
                    app:stiffness="300" />
            </RelativeLayout>

            <View
                android:id="@+id/horizontal_small_2"
                style="@style/horizontal_small"
                android:layout_below="@+id/image_pager" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/information_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/horizontal_small_2"
                android:padding="@dimen/item_vertical_margin">

                <TextView
                    android:id="@+id/info_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_name_demo"
                    android:textColor="@color/darkGrey"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/info_title_code"
                    style="@style/TitleCodeProduct"
                    android:layout_marginTop="@dimen/item_horizontal_margin_small"
                    android:text="@string/title_code"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/info_name" />

                <TextView
                    android:id="@+id/info_code"
                    style="@style/CodeProduct"
                    android:layout_marginStart="@dimen/item_horizontal_margin_small"
                    android:layout_marginLeft="@dimen/item_horizontal_margin_small"
                    android:text="@string/code_demo"
                    app:layout_constraintBaseline_toBaselineOf="@+id/info_title_code"
                    app:layout_constraintStart_toEndOf="@+id/info_title_code" />

                <TextView
                    android:id="@+id/out_stock"
                    style="@style/OutOfStock"
                    android:layout_marginTop="@dimen/item_vertical_margin_small"
                    android:text="@string/out_of_stock"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/info_title_code" />

                <TextView
                    android:id="@+id/info_price_cur"
                    style="@style/PriceProductDetail"
                    android:layout_marginTop="@dimen/item_vertical_margin_small"
                    android:text="@string/price_demo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/out_stock" />

                <TextView
                    android:id="@+id/info_price_sale"
                    style="@style/PriceSaleDetail"
                    android:layout_marginStart="@dimen/item_horizontal_margin_small"
                    android:layout_marginLeft="@dimen/item_horizontal_margin_small"
                    android:text="@string/price_sale_demo"
                    app:layout_constraintBaseline_toBaselineOf="@+id/info_price_cur"
                    app:layout_constraintStart_toEndOf="@id/info_price_cur" />

                <TextView
                    android:id="@+id/info_tag_sale"
                    style="@style/TagSaleItem"
                    android:layout_marginStart="@dimen/item_horizontal_margin_small"
                    android:layout_marginLeft="@dimen/item_horizontal_margin_small"
                    android:text="@string/tag_sale_demo"
                    app:layout_constraintBaseline_toBaselineOf="@+id/info_price_cur"
                    app:layout_constraintStart_toEndOf="@id/info_price_sale" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/horizontal_medium"
                style="@style/HorizontalMedium"
                android:layout_below="@+id/information_product" />

            <RelativeLayout
                android:id="@+id/information_pager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/horizontal_medium">

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tab_layout"
                    style="@style/TabLayout"
                    app:tabIndicatorColor="@color/tomato"
                    app:tabSelectedTextColor="@color/darkGrey"
                    app:tabTextColor="@color/coolGrey" />

                <View
                    android:id="@+id/horizontal_small_3"
                    style="@style/horizontal_small"
                    android:layout_below="@id/tab_layout" />

                <hust.soict.it2.sonbv.productdiscovery.adapter.WrapContentHeightViewPager
                    android:id="@+id/info_detail_pager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/horizontal_small_3"
                    android:layout_margin="@dimen/item_vertical_margin" />

            </RelativeLayout>

            <View
                android:id="@+id/horizontal_medium_2"
                style="@style/HorizontalMedium"
                android:layout_below="@+id/information_pager" />

            <TextView
                android:id="@+id/title_other_product"
                style="@style/TitleOtherProduct"
                android:layout_below="@id/horizontal_medium_2"
                android:text="@string/other_product" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_other_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_other_product"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <View
                android:id="@+id/horizontal_medium3"
                style="@style/ViewEnd"
                android:layout_below="@+id/recyclerview_other_product"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageButton
            android:id="@+id/decrease"
            style="@style/ButtonStyle"
            android:src="@drawable/ic_minus" />

        <TextView
            style="@style/NumberShopping"
            android:text="@string/number_shopping" />

        <ImageButton
            android:id="@+id/increase"
            style="@style/ButtonStyle"
            android:src="@drawable/ic_add" />

        <RelativeLayout
            android:id="@+id/price_shopping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/item_horizontal_margin_s_medium"
            android:layout_marginLeft="@dimen/item_horizontal_margin_s_medium"
            android:background="@color/white"
            android:padding="16dp">

            <ImageView
                android:id="@+id/title_guarantee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_shopping_cart_white" />

            <TextView
                android:id="@+id/content_guarantee"
                style="@style/PriceShopping"
                android:text="@string/price_demo" />

        </RelativeLayout>
    </LinearLayout>


</RelativeLayout>